// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reviews in expyrico snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#FAFAF8",
      "flex": 1,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "additive",
        }
      }
      style={
        [
          {
            "flex": 1,
          },
          {
            "backgroundColor": "#FAFAF8",
          },
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          [
            {
              "flexGrow": 1,
            },
            {
              "gap": 16,
              "padding": 24,
              "paddingBottom": 110,
            },
          ]
        }
        showsVerticalScrollIndicator={false}
        style={
          {
            "flex": 1,
          }
        }
      >
        <View>
          <View
            style={
              {
                "gap": 6,
                "marginBottom": 6,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#2C2C28",
                  "fontSize": 28,
                  "fontWeight": "700",
                }
              }
            >
              Reviews
            </Text>
            <Text
              style={
                {
                  "color": "#8C8C85",
                  "lineHeight": 20,
                }
              }
            >
              Product quality signals will live here once community reviews are enabled.
            </Text>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "borderWidth": 1,
                  "gap": 12,
                  "minHeight": 44,
                  "padding": 24,
                },
                {
                  "backgroundColor": "#D6F0E6",
                  "borderColor": "#F0F0ED",
                  "borderRadius": 30,
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "height": 60,
                    "justifyContent": "center",
                    "width": 60,
                  },
                  {
                    "backgroundColor": "#FAFAF8",
                    "borderRadius": 22,
                  },
                ]
              }
            />
            <Text
              style={
                [
                  {
                    "fontSize": 20,
                    "fontWeight": "700",
                    "textAlign": "center",
                  },
                  {
                    "color": "#2C2C28",
                  },
                ]
              }
            >
              Reviews coming next
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 14,
                    "lineHeight": 20,
                    "maxWidth": 270,
                    "textAlign": "center",
                  },
                  {
                    "color": "#8C8C85",
                  },
                ]
              }
            >
              After product pages launch, this tab will show helpful votes and trusted product notes.
            </Text>
          </View>
        </View>
      </RCTScrollView>
    </RNCSafeAreaView>
  </View>
</View>
`;

exports[`reviews in expyricoDark snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#111512",
      "flex": 1,
      "opacity": 0,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "additive",
        }
      }
      style={
        [
          {
            "flex": 1,
          },
          {
            "backgroundColor": "#111512",
          },
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          [
            {
              "flexGrow": 1,
            },
            {
              "gap": 16,
              "padding": 24,
              "paddingBottom": 110,
            },
          ]
        }
        showsVerticalScrollIndicator={false}
        style={
          {
            "flex": 1,
          }
        }
      >
        <View>
          <View
            style={
              {
                "gap": 6,
                "marginBottom": 6,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#FAFAF8",
                  "fontSize": 28,
                  "fontWeight": "700",
                }
              }
            >
              Reviews
            </Text>
            <Text
              style={
                {
                  "color": "#B7BDB7",
                  "lineHeight": 20,
                }
              }
            >
              Product quality signals will live here once community reviews are enabled.
            </Text>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "borderWidth": 1,
                  "gap": 12,
                  "minHeight": 44,
                  "padding": 24,
                },
                {
                  "backgroundColor": "#1F342C",
                  "borderColor": "#2D3A34",
                  "borderRadius": 30,
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "height": 60,
                    "justifyContent": "center",
                    "width": 60,
                  },
                  {
                    "backgroundColor": "#191F1B",
                    "borderRadius": 22,
                  },
                ]
              }
            />
            <Text
              style={
                [
                  {
                    "fontSize": 20,
                    "fontWeight": "700",
                    "textAlign": "center",
                  },
                  {
                    "color": "#FAFAF8",
                  },
                ]
              }
            >
              Reviews coming next
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 14,
                    "lineHeight": 20,
                    "maxWidth": 270,
                    "textAlign": "center",
                  },
                  {
                    "color": "#B7BDB7",
                  },
                ]
              }
            >
              After product pages launch, this tab will show helpful votes and trusted product notes.
            </Text>
          </View>
        </View>
      </RCTScrollView>
    </RNCSafeAreaView>
  </View>
</View>
`;
